删去Experiments和Software，增加Collaborations和Model背景图片，修改Human Practices和Public Engagement文案，手册使用轮播图，增加Model页、InterLab页。

--- a/Attributions.html
+++ b/Attributions.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Attributions</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
-    <!--<link rel="stylesheet" href="css/nav.css">-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
+    <link rel="stylesheet" href="css/fontawesome.css">
     <!--<link rel="stylesheet" href="css/contents.css">-->
-    <!--<link rel="stylesheet" href="css/parts.css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="css/parts.css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/parts.css&action=raw&ctype=text/css">-->
 
-    <!--<script src="js/jquery.js"></script>-->
+    <script src="js/jquery.js"></script>
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -35,9 +35,92 @@
         <div class="moduleTitle">Attributions</div>
     </div>
 
-    <div id="article">
-        <div class="mainText">
-            <p>There is nothing here at the moment.</p>
+    <div id="mainBody">
+        <div id="article">
+            <div>
+                <h2 class="title">Attribution by team members</h2>
+                <div class="mainText">
+                    <p><b>Captain</b>: Yan Xie.</p>
+                    <p><b>Wetlab</b>: Xue Han, Kang Xu, Xun Shu and Kaidi Chen were responsible in the designing,
+                        cloning and testing of all our proteins.</p>
+                    <p><b>Drylab</b>: Weixu Liu, Mingze Sun, Jinwei Zhu and Xilei Peng were responsible in the
+                        developement of our online software.</p>
+                    <p><b>Modelling</b>: Jinwei Zhu and Xilei Peng were responsible for the mathematical model of this
+                        project.</p>
+                    <p><b>Programming</b>: Ruichao Zheng was responsible in software programming.</p>
+                    <p><b>Human Practice</b>: Human practice events were organized by Xue Han, Zhiyue Wu, Jingyi Zhu and
+                        Kaidi Chen.</p>
+                    <p><b>Wiki</b>: Ruichao Zheng, Hao Liu, Zhiyue Wu and Jingyi Zhu were responsible for the design and development of
+                        Wiki.</p>
+                    <p><b>Posters and Vidio</b>: Yawei Zhang, Hao Liu, Xun Shu, Zhiyue Wu and Jingyi Zhu were
+                        responsible for the design of our posters.</p>
+                </div>
+            </div>
+
+            <h2 class="title">Supervision</h2>
+            <div class="mainText">
+                <p><b>Professors</b>: We have monthly report to professors and they provide valuable advice to us each
+                    time.</p>
+                <p>Professor Jun Yang supervised the whole project and advised us on the project application.</p>
+                <p>Professor Lihan Zi advised us on the synthetic biology part, human practice and wiki.</p>
+                <p>Professor Jun Ren provided lab equipments and supported for the whole project.</p>
+                <p><b>Teaching assistant (postgraduate students)</b>: Bolin Zang gived comment on our work and we made
+                    great progress.</p>
+            </div>
+
+            <h2 class="title">Advice from experts</h2>
+            <div class="mainText">
+                <p>Thanks to Dr. Lihua Zhang and Huiming Yuan, the researcher of the Dalian Institute of Chemical
+                    Physics, Chinese Academy of Sciences for their guidance on our project. (<a
+                            href="http://www.dicp.ac.cn/" target="_blank">http://www.dicp.ac.cn/</a>)</p>
+            </div>
+
+            <h2 class="title">Lab Support</h2>
+            <div class="mainText">
+                <p>Thanks to Biological Experiment Teaching Center of School of Life Science and Biotechnology, Dalian
+                    University of Technology. (<a href="http://life.dlut.edu.cn/" target="_blank">http://life.dlut.edu.cn/</a>)
+                </p>
+                <p>Thanks to Professor Lingyun Jia's research group in Dalian University of Technology for providing
+                    Nanobodies.</p>
+                <p>Thanks to Professor Changying Xue's research group in Dalian University of Technology for advising on
+                    the part of liquid crystals.</p>
+            </div>
+
+            <h2 class="title">Human Practice Support</h2>
+            <div class="mainText">
+                <p>Thanks to the Jianshan Community, Heishijiao Street in Dalian for providing a platform for our
+                    presentation.</p>
+                <p>Thanks to the High School Attached to Dalian University of Technology for supporting our science
+                    projects. (<a href="http://fg.dlut.edu.cn/" target="_blank">http://fg.dlut.edu.cn/</a>)</p>
+                <p>Thanks to Dalian Haiwan Senior High School for supporting our science projects.</p>
+                <p>Thanks to the doctors at the Second Hospital of Dalian Medical University for providing the situation
+                    of patients macroscopically. (<a href="http://www.shdmu.com/"
+                                                     target="_blank">http://www.shdmu.com/</a>) </p>
+            </div>
+
+            <h2 class="title">Funding</h2>
+            <div class="mainText">
+                <p>Thanks to TECAN in Swiss for for providing financial assistance. (<a href="https://www.tecan.com/"
+                                                                                        target="_blank">https://www.tecan.com/</a>)
+                </p>
+            </div>
+
+            <h2 class="title">Collaboration</h2>
+            <div class="mainText">
+                <p>Cooperated with Ocean University of China to give lectures and posters in primary and secondary
+                    schools. (<a href="http://www.ouc.edu.cn/" target="_blank">http://www.ouc.edu.cn/</a>)</p>
+            </div>
+
+            <h2 class="title">Thank you for helping DLUT_China_B!</h2>
+
+            <p>Address</p>
+            <p>School of Life Science and Biotechnology</p>
+            <p>No.2 Linggong Road, Ganjingzi District</p>
+            <p> Dalian University of Technology</p>
+            <p> Dalian, Liaoning Province</p>
+            <p> P.R. of China</p>
+            <p> Zip: 116024</p>
+            <p> Email:general@dlut.edu.cn</p>
         </div>
     </div>
 
@@ -68,9 +151,9 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <!--<script src="js/script.js"></script>-->
+    <script src="js/script.js"></script>
     <!--<script src="js/contents.js"></script>-->
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
     <script>
         $(document).ready(function () {
