--- a/HumanPractices.html
+++ b/HumanPractices.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Human Practices</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
-    <!--<link rel="stylesheet" href="css/nav.css">-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
-    <!--<link rel="stylesheet" href="css/contents.css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="css/fontawesome.css">
+    <link rel="stylesheet" href="css/contents.css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
 
-    <!--<script src="js/jquery.js"></script>-->
+    <script src="js/jquery.js"></script>
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -36,70 +36,95 @@
     <div id="mainBody">
         <div id="contents"></div>
         <div id="article">
+            <div class="mainText">
+                <p>We carried out human practices from the perspectives of the public, doctors and researchers, and get
+                    different feedback to promote our projects further.</p>
+            </div>
+
             <div>
-                <h2 class="title">Brochure Designing and Preaching</h2>
+                <h2 class="title">Interview with the public</h2>
                 <div class="mainText">
-                    <p>Our team of practice designed a brochure on knowledge about kidney disease carefully in order to
-                        make more patients with diabetes and hypertension recognize the dangers of the development of
-                        chronic kidney disease(CKD), and help the old to prevent CKD, hypertension and diabetes early.In
-                        July 2018, we held a knowledge preaching about the early prevention of CKD in Jianshan Community
-                        of Dalian ,and at the same time, we distributed our brochure designed by ourselves.In a summer
-                        house in the community, we distributed the brochure to some aunts,which lead them to understand
-                        the dangers of kidney disease, the causes of kidney disease, and methods for preventing early
-                        kidney disease. Besides, we answered many questions about diabetes and high blood pressure asked
-                        by those aunts patiently. After we had a further communication with community residents by
-                        interviewing them, we clearly felt that they had a deeper understanding of the dangers of CKD
-                        and the importance of its early prevention,which means our practice is successful enough.</p>
+                    <p>The team members conducted a social survey. We found that many people are too busy to go to the
+                        hospital for regular medical examinations. People pay less attention to the health of the
+                        kidneys. We want to change this situation by using our portable urine testing equipment.
+                        According to the practical data, we have found that more than 80% of respondents are willing to
+                        use our products. Considering about the binding time of antigen and antibody and the
+                        corresponding time of liquid crystal, the acceptable waiting time for respondents is about 40
+                        minutes. We will shorten the waiting time under the condition of ensuring the accuracy of
+                        measurement in the subsequent experiments.</p>
+                    <p>This interview and sample survey enriched our project background data. We analyzed and processed
+                        the data obtained from the survey and found that our project does have certain market demand.
+                        This also laid the foundation for our subsequent optimization of experimental conditions.</p>
                     <table class="img">
                         <tr>
-                            <td><img src="http://2018.igem.org/wiki/images/0/0c/T--DLUT_China_B--HumanPractice6.jpg"></td>
-                            <td><img src="http://2018.igem.org/wiki/images/1/17/T--DLUT_China_B--HumanPractice7.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/b/b4/T--DLUT_China_B--HumanPractice14.jpg">
+                            </td>
                         </tr>
                         <tr>
-                            <td><img src="http://2018.igem.org/wiki/images/3/38/T--DLUT_China_B--HumanPractice8.jpg"></td>
-                            <td><img src="http://2018.igem.org/wiki/images/f/f1/T--DLUT_China_B--HumanPractice9.jpg"></td>
+                            <td>
+                                <p class="footnote">Fig.1 interview with the public</p>
+                            </td>
                         </tr>
                     </table>
                 </div>
             </div>
 
             <div>
-                <h2 class="title">Interviews with Doctors</h2>
+                <h2 class="title">Interviews with doctors</h2>
                 <div class="mainText">
-                    <p>During the summer vacation, the team members carried out practical activities throughout the
-                        country and went to the hospital to interview the specialists in the kidney department. We not
-                        only understand the serious situation that diabetes and hypertension cause the proportion of
-                        chronic kidney disease in China to rise year by year, but also know that patients with diabetes
-                        have no early and staged awareness. When patients come to the hospital for treatment, most of
-                        them have obvious symptoms and enter CKD phase III, and early visits and treatments are
-                        extremely important for the development of delayed kidney disease. At present, the diagnosis
-                        method of the hospital is mainly blood test, but the doctor said that if a non-invasive portable
-                        detection method through urine can be developed, it can not only alleviate the pain of blood
-                        drawing, but also have a very high rate of early detection and treatment. In this interview, we
-                        learned the importance and urgent needs of early detection in the treatment of chronic kidney
-                        disease and the importance of improving the awareness of early treatment of patients, and more
-                        deeply recognized the practicality and usefulness of our projects.</p>
+                    <p>In August 2018, the team members went to Linyi City People's Hospital of Shandong Province to
+                        interview Dr. Liu Haijun, a specialist in nephrology. We knew that early diagnosis and treatment
+                        are extremely important in delaying the development of kidney disease. Only when the patient has
+                        obvious symptoms will he go to the hospital for an examination. But they may already have
+                        entered the dominant diabetic nephropathy (overtDN).</p>
+                    <p>Blood test is the most common diagnosis method of the hospital currently. It takes ¥48 to test
+                        the blood β2-microglobulin. However, Dr.Liu said that if a portable urine test method can be
+                        developed, it can not only alleviate the pain of blood drawing, but also greatly improve the
+                        awareness of diabetes patients and the rate of early visits.</p>
+                    <p>In this interview we exchanged ideas with doctors, and we have learned that from a clinical
+                        perspective, our project is more suitable for use at home. It can greatly arouse the awareness
+                        of early patients, which can indirectly improve the diagnosis rate and provide the best time for
+                        treatment.</p>
                     <table class="img">
                         <tr>
-                            <td><img src="http://2018.igem.org/wiki/images/9/9c/T--DLUT_China_B--HumanPractice10.jpg"></td>
-                            <td><img src="http://2018.igem.org/wiki/images/d/d4/T--DLUT_China_B--HumanPractice11.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/9/9c/T--DLUT_China_B--HumanPractice10.jpg">
+                            </td>
+                            <td><img src="http://2018.igem.org/wiki/images/d/d4/T--DLUT_China_B--HumanPractice11.jpg">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <p class="footnote">Fig.2 Interviews with doctors</p>
+                            </td>
                         </tr>
                     </table>
                 </div>
             </div>
 
             <div>
-                <h2 class="title">Product Research, Fun Marketing</h2>
+                <h2 class="title">Interview with the researches in the Dalian Institute of Chemical Physics(DICP)</h2>
                 <div class="mainText">
-                    <p>In order to further understand the market demand for our products, the patient's recognition of
-                        products and their performance expectations for the products, we designed a questionnaire of the
-                        product. And to help people understand the superiority of our products, we have designed a
-                        product-based storyline, and we hope to attract more people who interest in our products in the
-                        form of anthropomorphic storytelling and made our content of the project is impressive.</p>
+                    <p>In order to better understand the current situation of urine testing, the team members came to
+                        the Research Group of Biomolecular Efficient Separation and Characterization of Dalian Institute
+                        of Chemical Physics, Chinese Academy of Sciences in October 2018. We exchanged ideas with
+                        researcher Yuan Huiming. Researcher Yuan said that the main problem in urine testing is to
+                        eliminate interference from other proteins in the urine. The nanobody of β2-microglobulin we
+                        selected is more specific and can solve this problem well. On the other hand, our liquid crystal
+                        detection method has extremely high sensitivity and has great advantages for the detection of
+                        trace proteins in urine.</p>
+                    <p>This exchange allowed us to see the achievability and practical application of our project from
+                        the aspect of technical application. It also let us have confidence in our projects.</p>
                     <table class="img">
                         <tr>
-                            <td><img src="http://2018.igem.org/wiki/images/c/c4/T--DLUT_China_B--HumanPractice12.jpg"></td>
-                            <td><img src="http://2018.igem.org/wiki/images/3/31/T--DLUT_China_B--HumanPractice13.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/c/c4/T--DLUT_China_B--HumanPractice12.jpg">
+                            </td>
+                            <td><img src="http://2018.igem.org/wiki/images/3/31/T--DLUT_China_B--HumanPractice13.jpg">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <p class="footnote">Fig.3 Interview with the researches</p>
+                            </td>
                         </tr>
                     </table>
                 </div>
@@ -134,10 +159,10 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <!--<script src="js/script.js"></script>-->
-    <!--<script src="js/contents.js"></script>-->
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
+    <script src="js/script.js"></script>
+    <script src="js/contents.js"></script>
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
