--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>2018 iGEM_DLUT_B</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!--<link rel="stylesheet" href="css/style.css">-->
     <!--<link rel="stylesheet" href="css/nav.css">-->
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/fontawesome.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
+    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
 
-    <script src="js/jquery.js"></script>
+    <!--<script src="js/jquery.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
@@ -47,35 +47,6 @@
                 <p>Hello! I’m a lovely Kidney baby, an essential organ in your body. Can you see those sparkling items pointed by my hand? Right! This is a wonderful liquid crystal show caused by the combination of β2-MG and nanobodies. What’s more, the different concentrations of β2-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea, right?</p>
             </div>
         </div>
-        <!--<div id="box">-->
-        <!--<div id="box_img">-->
-        <!--<ul></ul>-->
-        <!--</div>-->
-        <!--<div id="word">-->
-        <!--<ul></ul>-->
-        <!--</div>-->
-        <!--<div id="controller">-->
-        <!--<div id="backward"><i class="fas fa-angle-left"></i></div>-->
-        <!--<div id="forward"><i class="fas fa-angle-right"></i></div>-->
-        <!--</div>-->
-        <!--<script>-->
-        <!--let data = [-->
-        <!--{-->
-        <!--//"src": "http://2018.igem.org/wiki/images/1/1a/T&#45;&#45;DLUT_China_B&#45;&#45;Top1.jpg",-->
-        <!--"src": "img/Top1.png",-->
-        <!--"title": "DLUT China B",-->
-        <!--"description": "DLUT China B",-->
-        <!--},-->
-        <!--{-->
-        <!--// "src": "http://2018.igem.org/wiki/images/0/04/T&#45;&#45;DLUT_China_B&#45;&#45;Top2.jpg",-->
-        <!--"src": "img/Top2.jpg",-->
-        <!--"title": "Principle",-->
-        <!--"description": "Principle.",-->
-        <!--}-->
-        <!--];-->
-        <!--$(document).ready(slideshow(data));-->
-        <!--</script>-->
-        <!--</div>-->
         <br>
     </div>
 
@@ -83,21 +54,18 @@
         <div class="tr">
             <div class="td">
                 <a href="http://2018.igem.org/Team:DLUT_China_B/Description">
-                    <!--<img src="img/Circle1.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/b/b8/T--DLUT_China_B--Circle1.png" width="250">
                     <div>Project</div>
                 </a>
             </div>
             <div class="td">
                 <a href="http://2018.igem.org/Team:DLUT_China_B/Parts">
-                    <!--<img src="img/Circle2.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/f/f0/T--DLUT_China_B--Circle2.png" width="250">
                     <div>Parts</div>
                 </a>
             </div>
             <div class="td">
                 <a href="http://2018.igem.org/Team:DLUT_China_B/Model">
-                    <!--<img src="img/Circle3.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--Circle3.png" width="250">
                     <div>Model</div>
                 </a>
@@ -106,21 +74,18 @@
         <div class="tr">
             <div class="td">
                 <a href="http://2018.igem.org/Team:DLUT_China_B/Applied_Design">
-                    <!--<img src="img/Circle4.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/7/71/T--DLUT_China_B--Circle4.png" width="250">
                     <div>Awards</div>
                 </a>
             </div>
             <div class="td">
                 <a href="http://2018.igem.org/Team:DLUT_China_B/Human_Practices">
-                    <!--<img src="img/Circle5.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/6/63/T--DLUT_China_B--Circle5.png" width="250">
                     <div id="humanPracticesCircle"><p>Human<br>Practices</p></div>
                 </a>
             </div>
             <div class="td">
                 <a href="http://2018.igem.org/Team:DLUT_China_B/TeamMembers">
-                    <!--<img src="img/Circle6.png" width="250">-->
                     <img src="http://2018.igem.org/wiki/images/0/06/T--DLUT_China_B--Circle6.png" width="250">
                     <div>Team</div>
                 </a>
@@ -148,10 +113,8 @@
                 <p><i class="fab fa-weibo"></i> Weibo</p>
             </div>
             <div id="qrCode">
-                <!--<div><img src="img/wechat.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                 <div></div>
-                <!--<div><img src="img/weibo.png" width="100"></div>-->
                 <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
             </div>
         </div>
