--- a/indexPage.html
+++ b/indexPage.html
@@ -68,22 +68,22 @@
                         <meta charset="UTF-8">
                         <meta http-equiv="X-UA-Compatible" content="IE=edge">
                         <title>2018 iGEM_DLUT_B</title>
-                        <link rel="stylesheet" href="css/style.css">
-                        <link rel="stylesheet" href="css/nav.css">
-                        <link rel="stylesheet" href="css/bubbles.css">
-                        <link rel="stylesheet" href="css/fontawesome.css">
+                        <!--<link rel="stylesheet" href="css/style.css">-->
+                        <!--<link rel="stylesheet" href="css/nav.css">-->
+                        <!--<link rel="stylesheet" href="css/bubbles.css">-->
+                        <!--<link rel="stylesheet" href="css/fontawesome.css">-->
                         <!--<link rel="stylesheet" href="css/slideshow.css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">
                         <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-                        <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+                        <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
 
-                        <script src="js/jquery.js"></script>
-                        <script src="js/bubbles.js"></script>
+                        <!--<script src="js/jquery.js"></script>-->
+                        <!--<script src="js/bubbles.js"></script>-->
                         <!--<script src="js/slideshow.js"></script>-->
                         <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
-                        <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>-->
+                        <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/bubbles.js&action=raw&ctype=text/javascript"></script>
 
                         <script>
                             function check() {
@@ -102,12 +102,13 @@
                     <body onload="check()">
                     <div id="dlutb">
                         <div id="header">
+                            <div id="team">DLUT_China_B</div>
                             <div id="nav"></div>
                             <div id="box">
-                                <img src="img/Top1.png">
-                                <div id="word">
-                                    <h2>DLUT China B</h2>
-                    <p>DLUT China B</p>
+                                <img src="http://2018.igem.org/wiki/images/4/47/T--DLUT_China_B--Top1.png">
+                                <div>
+                                    <h2>Dr. Familict</h2>
+                    <p>Hello! I’m a lovely Kidney baby, an essential organ in your body. Can you see those sparkling items pointed by my hand? Right! This is a wonderful liquid crystal show caused by the combination of β2-MG and nanobodies. What’s more, the different concentrations of β2-MG make the different degree of brightness showed by liquid crystal. We can make use of this phenomenon to achieve early detection of CKD caused mostly by diabetes and high blood pressure according to the brightness displayed by the detector confidently. Such an amazing idea, right?</p>
                 </div>
             </div>
             <!--<div id="box">-->
@@ -146,21 +147,18 @@
             <div class="tr">
                 <div class="td">
                     <a href="http://2018.igem.org/Team:DLUT_China_B/Description">
-                        <!--<img src="img/Circle1.png" width="250">-->
                         <img src="http://2018.igem.org/wiki/images/b/b8/T--DLUT_China_B--Circle1.png" width="250">
                         <div>Project</div>
                     </a>
                 </div>
                 <div class="td">
-                    <a href="http://2018.igem.org/Team:DLUT_China_B/PartsOverview">
-                        <!--<img src="img/Circle2.png" width="250">-->
+                    <a href="http://2018.igem.org/Team:DLUT_China_B/Parts">
                         <img src="http://2018.igem.org/wiki/images/f/f0/T--DLUT_China_B--Circle2.png" width="250">
                         <div>Parts</div>
                     </a>
                 </div>
                 <div class="td">
-                    <a href="http://2018.igem.org/Team:DLUT_China_B/ConditionOptimization">
-                        <!--<img src="img/Circle3.png" width="250">-->
+                    <a href="http://2018.igem.org/Team:DLUT_China_B/Model">
                         <img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--Circle3.png" width="250">
                         <div>Model</div>
                     </a>
@@ -169,21 +167,18 @@
             <div class="tr">
                 <div class="td">
                     <a href="http://2018.igem.org/Team:DLUT_China_B/Applied_Design">
-                        <!--<img src="img/Circle4.png" width="250">-->
                         <img src="http://2018.igem.org/wiki/images/7/71/T--DLUT_China_B--Circle4.png" width="250">
                         <div>Awards</div>
                     </a>
                 </div>
                 <div class="td">
                     <a href="http://2018.igem.org/Team:DLUT_China_B/Human_Practices">
-                        <!--<img src="img/Circle5.png" width="250">-->
                         <img src="http://2018.igem.org/wiki/images/6/63/T--DLUT_China_B--Circle5.png" width="250">
-                        <div>Human Practices</div>
+                        <div id="humanPracticesCircle"><p>Human<br>Practices</p></div>
                     </a>
                 </div>
                 <div class="td">
                     <a href="http://2018.igem.org/Team:DLUT_China_B/TeamMembers">
-                        <!--<img src="img/Circle6.png" width="250">-->
                         <img src="http://2018.igem.org/wiki/images/0/06/T--DLUT_China_B--Circle6.png" width="250">
                         <div>Team</div>
                     </a>
@@ -211,10 +206,8 @@
                     <p><i class="fab fa-weibo"></i> Weibo</p>
                 </div>
                 <div id="qrCode">
-                    <!--<div><img src="img/wechat.png" width="100"></div>-->
                     <div><img src="http://2018.igem.org/wiki/images/c/c6/T--DLUT_China_B--wechat.png" width="100"></div>
                     <div></div>
-                    <!--<div><img src="img/weibo.png" width="100"></div>-->
                     <div><img src="http://2018.igem.org/wiki/images/6/6b/T--DLUT_China_B--weibo.png" width="100"></div>
                 </div>
             </div>
@@ -224,8 +217,8 @@
             <i class="fas fa-angle-up"></i>
         </div>
 
-        <script src="js/script.js"></script>
-        <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
+        <!--<script src="js/script.js"></script>-->
+        <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
         <script>
             /*对话气泡*/
             let conversation = {
@@ -403,8 +396,8 @@
                             answer: "awards"
                         },
                         {
-                            question: "Human Practice",
-                            answer: "humanPractice"
+                            question: "Human Practices",
+                            answer: "humanPractices"
                         },
                         {
                             question: "Teamwork and Cooperation",
@@ -475,16 +468,16 @@
                         }
                     ]
                 },
-                "humanPractice": {
+                "humanPractices": {
                     says: [
                         "We are committed to education and publicity.",
-                        "Choose \"Learn more\" and you will arrive at Human Practice.",
+                        "Choose \"Learn more\" and you will arrive at Human Practices.",
                         "Choose \"Back\", the destination will be reset."
                     ],
                     reply: [
                         {
                             question: "Learn more",
-                            answer: "goHumanPractice"
+                            answer: "goHumanPractices"
                         },
                         {
                             question: "Back",
@@ -526,16 +519,16 @@
                 window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Description";
             };
             goParts = function () {
-                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/PartsOverview";
+                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Parts";
             };
             goModel = function () {
-                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/ConditionOptimization";
+                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Model";
             };
             goAwards = function () {
-                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/AppliedDesign";
+                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Applied_Design";
             };
-            goHumanPractice = function () {
-                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/HumanPractice";
+            goHumanPractices = function () {
+                window.location.href = "http://2018.igem.org/Team:DLUT_China_B/Human_Practices";
             };
             goTeamworkAndCooperation = function () {
                 window.location.href = "http://2018.igem.org/Team:DLUT_China_B/TeamMembers";
@@ -544,8 +537,7 @@
             function isShow($el) {
                 let winH = $(window).height(), /*获取窗口高度*/
                     scrollH = $(window).scrollTop(), /*获取窗口滚动高度*/
-                    top = $el.offsetTop;
-                /*获取元素距离窗口顶部偏移高度*/
+                    top = $el.offsetTop; /*获取元素距离窗口顶部偏移高度*/
                 return top < scrollH + winH;
             }
 
@@ -573,6 +565,7 @@
         </script>
     </div>
 </body>
+
 
 </p>
 <!--
