--- a/Collaborations.html
+++ b/Collaborations.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Collaborations</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/style.css">
     <!--<link rel="stylesheet" href="css/nav.css">-->
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
     <!--<link rel="stylesheet" href="css/slideshow.css">-->
     <!--<link rel="stylesheet" href="css/fontawesome.css">-->
     <!--<link rel="stylesheet" href="css/contents.css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
     <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
 
-    <!--<script src="js/jquery.js"></script>-->
+    <script src="js/jquery.js"></script>
     <!--<script src="js/slideshow.js"></script>-->
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
@@ -29,7 +29,7 @@
 <div id="dlutb">
     <div id="moduleHeader">
         <div id="nav"></div>
-        <!--todo 背景图片-->
+        <div id="background" class="collaborations"></div>
         <div class="moduleTitle">Collaborations</div>
     </div>
 
@@ -111,9 +111,9 @@
             </div>
 
             <div>
-                <h2 class="title">CCIC in Shanghai</h2>
+                <h2 class="title">CCiC in Shanghai</h2>
                 <div class="mainText">
-                    <p>The CCIC exchange meeting was held at Shanghai University of Science and Technology. Two teams
+                    <p>The CCiC exchange meeting was held at Shanghai University of Science and Technology. Two teams
                         from our school went to the conference. The team participated in the trouble shooting process,
                         shared some problems in the project with other teams, and got suggestions and help from other
                         teams. In the poster session, we showed posters to everyone and showed our posters to interested
