--- a/PublicEngagement.html
+++ b/PublicEngagement.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Public Engagement</title>
-    <!--<link rel="stylesheet" href="css/style.css">-->
-    <!--<link rel="stylesheet" href="css/nav.css">-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
     <!--<link rel="stylesheet" href="css/bubbles.css">-->
-    <!--<link rel="stylesheet" href="css/slideshow.css">-->
-    <!--<link rel="stylesheet" href="css/fontawesome.css">-->
-    <!--<link rel="stylesheet" href="css/contents.css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">
+    <link rel="stylesheet" href="css/slideshow.css">
+    <link rel="stylesheet" href="css/fontawesome.css">
+    <link rel="stylesheet" href="css/contents.css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/style.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/nav.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/bubbles.css&action=raw&ctype=text/css">-->
     <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/slideshow.css&action=raw&ctype=text/css">-->
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">
-    <link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/fontawesome.css&action=raw&ctype=text/css">-->
+    <!--<link rel="stylesheet" href="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/css/contents.css&action=raw&ctype=text/css">-->
 
-    <!--<script src="js/jquery.js"></script>-->
-    <!--<script src="js/slideshow.js"></script>-->
+    <script src="js/jquery.js"></script>
+    <script src="js/slideshow.js"></script>
     <!--<script src="js/bubbles.js"></script>-->
     <!--<script src="js/typed.js"></script>-->
     <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/slideshow.js&action=raw&ctype=text/javascript"></script>-->
@@ -37,76 +37,141 @@
         <div id="contents"></div>
         <div id="article">
             <div>
-                <h2 class="title">Publicity on Campus Open Day</h2>
+                <h2 class="title">Brochure designing and propagating</h2>
                 <div class="mainText">
-                    <p>In May 2018, on the campus open day of Dalian University of Technology, the DLUT_CHINA_B team
-                        carried out a series of activities to expand the influence of synthetic biology and iGEM
-                        competition at Dalian University of Technology. We designed the “Prize-giving Quiz” game to give
-                        the guests a general knowledge of biology. “Understanding Micro-World Activities” provides
-                        visitors with microscopes and some samples made by the team members which let them to observe
-                        and understand the microbes we can't see. This part attracted many primary and middle school
-                        students. We also distributed more than 300 survey questionnaires. These questionnaires were
-                        mainly designed for people of different ages to understand their physical condition and for
-                        understanding the market demand of our product. The results showed that a lot of people are
-                        interested in our program which made the team members more motivated.</p>
+                    <p>In order to allow more diabetic patients to realize the dangers of the development of chronic
+                        kidney disease in the later stage, and to help the middle-aged and the elderly to improve their
+                        awareness of prevention, our team members have carefully designed the Kidney Diseases Brochure.
+                        The brochure includes four aspects including the causes of kidney disease, how to detect kidney
+                        disease, warning signs of kidney disease and how to prevent kidney disease.</p>
+                    <p>In July 2018, the team members came to the Jianshan Community in Dalian to hold a knowledge
+                        lecture on early prevention of kidney disease. At the Community Activity Center, we distributed
+                        the brochures to everyone to let them learn about the dangers of kidney disease, the causes of
+                        kidney disease and ways to prevent early kidney disease. After our explanation, residents’
+                        awareness of CKD has been significantly raised. During the promotion process, the residents
+                        asked many questions about diabetic nephropathy. The team members have answered them one by
+                        one.</p>
+                    <p>Through this event, growing number of people were aware of the importance of regular medical examinations and have a deeper understanding of kidney disease. They also learned about the prevention of diabetic nephropathy and hypertensive nephropathy through this opportunity.</p>
                     <table class="img">
                         <tr>
-                            <td colspan="2"><img src="http://2018.igem.org/wiki/images/7/70/T--DLUT_China_B--Education12.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/0/0c/T--DLUT_China_B--HumanPractice6.jpg">
+                            </td>
+                            <td><img src="http://2018.igem.org/wiki/images/1/17/T--DLUT_China_B--HumanPractice7.jpg">
+                            </td>
                         </tr>
                         <tr>
-                            <td><img src="http://2018.igem.org/wiki/images/1/1c/T--DLUT_China_B--Education13.jpg"></td>
-                            <td><img src="http://2018.igem.org/wiki/images/1/1f/T--DLUT_China_B--Education14.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/3/38/T--DLUT_China_B--HumanPractice8.jpg">
+                            </td>
+                            <td><img src="http://2018.igem.org/wiki/images/f/f1/T--DLUT_China_B--HumanPractice9.jpg">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><p class="footnote">Fig.1 Community Activity</p></td>
+                        </tr>
+                    </table>
+
+                    <div id="box">
+                        <div id="box_img">
+                            <ul></ul>
+                        </div>
+                        <div id="word">
+                            <ul></ul>
+                        </div>
+                        <div id="controller">
+                            <div id="backward"><i class="fas fa-angle-left"></i></div>
+                            <div id="forward"><i class="fas fa-angle-right"></i></div>
+                        </div>
+                        <script>
+                            let data = [
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/c/c7/T--DLUT_China_B--Brochure1.png",
+                                    "title": "1 / 8"
+                                },
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/3/35/T--DLUT_China_B--Brochure2.png",
+                                    "title": "2 / 8"
+                                },
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/8/81/T--DLUT_China_B--Brochure3.png",
+                                    "title": "3 / 8"
+                                },
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/4/41/T--DLUT_China_B--Brochure4.png",
+                                    "title": "4 / 8"
+                                },
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/1/1e/T--DLUT_China_B--Brochure5.png",
+                                    "title": "5 / 8"
+                                },
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/7/71/T--DLUT_China_B--Brochure6.png",
+                                    "title": "6 / 8"
+                                },
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/b/b5/T--DLUT_China_B--Brochure7.png",
+                                    "title": "7 / 8"
+                                },
+                                {
+                                    "src": "http://2018.igem.org/wiki/images/b/be/T--DLUT_China_B--Brochure8.png",
+                                    "title": "8 / 8"
+                                },
+                            ];
+                            $(document).ready(slideshow(data));
+                        </script>
+                    </div>
+                    <p class="footnote" style="text-align: center;">Fig.2 Kidney Diseases Brochure</p>
+                </div>
+            </div>
+
+            <div>
+                <h2 class="title">Publicity on the Campus Day</h2>
+                <div class="mainText">
+                    <p>In May 2018, on the Campus Day of Dalian University of Technology, the DLUT_China_B team carried
+                        out a series of activities to expand the influence of synthetic biology and iGEM competition at
+                        Dalian University of Technology. Them designed the “Prize-giving Quiz” game to give the guests a
+                        general knowledge of biology. “Understanding Micro-World” provides visitors with microscopes and
+                        some samples made by the team members which let them to observe and understand the microbes we
+                        can't see. This part attracted many primary and middle school students.</p>
+                    <p>This exhibition not only introduced synthetic biology and iGEM competitions, but also promoted our Dr. Familict project to let more people know the seriousness of kidney disease. We also got some valuable market research data. The public has given considerable attention to the project, which also makes our project more meaningful.</p>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/d/d1/T--DLUT_China_B--Education15.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p class="footnote">Fig.3 Publicity on the Campus Day</p>
+                            </td>
                         </tr>
                     </table>
                 </div>
             </div>
 
             <div>
-                <h2 class="title">Lead Synthetic Biology Into the Campus</h2>
+                <h2 class="title">Lead Synthetic biology into the campus</h2>
                 <div class="mainText">
                     <p>In order to propaganda synthetic biology knowledge to primary and secondary schools more vividly
                         in Dalian, our decided to work with OUC-CHINA. Their team members will design synthetic biology
                         science brochures and we would made into a poster. The poster will be displayed together with
                         the posters of DLUT_CHINA_B in several primary and secondary schools in Dalian as well as the
-                        libraries of Dalian University of Technology. The OUC-CHINA team's popular science brochure is
-                        called SPACESHIP E.coli, which compares E. coli to a spaceship, anthropomorphizing the ribosome,
-                        and describing the logic switches and biological components in synthetic biology vividly. We
-                        hope that more primary and middle school students will grow a great interest in synthetic
-                        biology through the activities. </p>
-                    <p>In these promotions, we also found that some of the high school attached great importance to this
-                        competition. High School affiliated to Dalian University of Technology is one of them.</p>
-                    <p>Three members of our team came to the High School affiliated to Dalian University of Technology.
-                        After the team members explained the principle of synthetic biology, many students have shown a
-                        great interest in synthetic biology. We learned that the Dalian High School affiliated to the
-                        Dalian University of Technology had also established the iGEM Student Association during the
-                        communication. This communication also provided some new ideas for the students of the iGEM
-                        association, which broadened their horizons and inspire them to learn more about synthetic
-                        biology.</p>
-                    <p>We hoped that our iGEM publicity trip would arouse the students’ interest in synthetic biology
-                        and contribute to the development of the iGEM competition in China.</p>
-                    <div class="img">
-                        <img src="http://2018.igem.org/wiki/images/a/a6/T--DLUT_China_B--Education5.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <img src="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--Education6.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <img src="http://2018.igem.org/wiki/images/7/7e/T--DLUT_China_B--Education7.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <img src="http://2018.igem.org/wiki/images/5/58/T--DLUT_China_B--Education8.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <img src="http://2018.igem.org/wiki/images/9/93/T--DLUT_China_B--Education9.jpg">
-                    </div>
-                    <br>
-                    <div class="img">
-                        <img src="http://2018.igem.org/wiki/images/2/2f/T--DLUT_China_B--Education10.jpg">
-                    </div>
+                        libraries of Dalian University of Technology. We hope that more primary and middle school
+                        students will grow a great interest in synthetic biology through the activities. </p>
+                    <p>Our team came to the High School affiliated to Dalian University of Technology. After the team
+                        members explained the principle of synthetic biology, many students have shown a great interest
+                        in synthetic biology.</p>
+                    <p>This communication not only allowed us to look at our projects more seriously and rigorously, but also provided some new ideas for the students of the iGEM association, which broadened their horizons and inspire them to learn more about synthetic biology. We hoped that our iGEM publicity trip would arouse the students’ interest in synthetic biology and contribute to the development of the iGEM competition in China. </p>
+                    <table class="img">
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/9/93/T--DLUT_China_B--Education9.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/0/0b/T--DLUT_China_B--Education6.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td><img src="http://2018.igem.org/wiki/images/5/58/T--DLUT_China_B--Education8.jpg"></td>
+                            <td><img src="http://2018.igem.org/wiki/images/a/a6/T--DLUT_China_B--Education5.jpg"></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><p class="footnote">Fig.4 Lead Synthetic biology into the campus</p></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
@@ -139,10 +204,10 @@
         <i class="fas fa-angle-up"></i>
     </div>
 
-    <!--<script src="js/script.js"></script>-->
-    <!--<script src="js/contents.js"></script>-->
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>
-    <script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>
+    <script src="js/script.js"></script>
+    <script src="js/contents.js"></script>
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/script.js&action=raw&ctype=text/javascript"></script>-->
+    <!--<script src="http://2018.igem.org/wiki/index.php?title=Template:DLUT_China_B/js/contents.js&action=raw&ctype=text/javascript"></script>-->
     <script>
         $(document).ready(function () {
             $(window).scroll(function () {
